<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/fui_auth_method_button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73">

        <Button
            android:id="@+id/findGames"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/find_games" />

        <Button
            android:id="@+id/createGames"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/create_games" />

        <Button
            android:id="@+id/manageGames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_games" />

        <Button
            android:id="@+id/yourGames"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/your_games" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="settings" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="359dp"
        android:layout_height="649dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appimage" />

</androidx.constraintlayout.widget.ConstraintLayout>