<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="287dp" />

    <EditText
        android:id="@+id/boardGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insert_name" />

    <Button
        android:id="@+id/search"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="Search" />

    <EditText
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textLongMessage|textMultiLine"
        android:text="@string/insert_bio" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/createGame"
            android:layout_width="321dp"
            android:layout_height="61dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/create_game"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>